--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uxml
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <UXML xmlns:ui="UnityEngine.UIElements">
-    <ui:VisualElement name="object-element">
-        <ui:Label name="GameObject" label="GameObject" text="GameObject"/>
+    <ui:VisualElement name="object-element" >
+        <Style src="HistoryWindow.uss" />
         <ui:Label name="GameObjectName" label="Name" text="" binding-path="m_Name"/>
+        <ui:VisualElement name="commits" />
     </ui:VisualElement>
 </UXML>
