--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uxml
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <UXML xmlns:ui="UnityEngine.UIElements" class="commit">
     <Style src="CommitDiff.uss" />
-    <ui:Button name="state" text="" />
+    <ui:Label name="state" text="" />
     <ui:Label name="commit_name" text=""/>
 </UXML>
