コミット行がわかりづらいため1行ずつ色を変更する

--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
@@ -3,6 +3,10 @@ Label {
     color: white;
 }
 
+.commit.alternate {
+    background-color: var(--unity-colors-alternated_rows-background);
+}
+
 .commit.disabled Label {
     color: gray;
 }
