--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
@@ -31,10 +31,15 @@
 .commit_info>#state {
     -unity-font-style: bold;
     border-color: white;
-    border-width: 2px;
+    border-width: 1px;
     border-radius: 10px;
     padding: 2px 4px;
     margin-right: 5px;
+    font-size: 10px;
+}
+
+.commit_info>#state.disabled {
+    display: none;
 }
 
 .commit_info>#state.Add {
