--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/CommitDiff.uss
@@ -6,6 +6,11 @@
 .commit #components {
     flex-direction: row;
     gap: 10px;
+    margin-bottom: 5px;
+}
+
+.commit #components.disabled {
+    margin-bottom: 0px;
 }
 
 .commit.alternate {
