--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uss
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uss
@@ -1,5 +1,9 @@
-Label {
+#GameObjectName {
     font-size: 20px;
     -unity-font-style: bold;
     color: rgb(68, 138, 255);
+}
+
+#toolbar-showlog{
+    flex-direction: row;
 }
