--- a/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uss
+++ b/Assets/HistoryViewer/Scripts/Editors/UIElements/HistoryWindow.uss
@@ -1,7 +1,11 @@
-#GameObjectName {
+#GameObjectName, #SceneName {
     font-size: 20px;
     -unity-font-style: bold;
     color: rgb(68, 138, 255);
+}
+
+#scene-logs:disabled, #gameObject-logs:disabled {
+    display:none;
 }
 
 #toolbar-showlog{
